# gpi-plant-manager

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  kiosk_preview.html  pyproject.toml  requirements.txt
.claude/: launch.json
docs/: UI-ARCHITECTURE.md  object-api.md  region-migration-runbook.md  stratustime-api-integration.md
scripts/: approve_regular_attendance.py  backfill_forklift_history.py  backfill_production_daily.py  diagnose_forklift_overload.py  diagnose_midnight_attendance.py  diagnose_odoo_calendar_conflicts.py  diagnose_saturday_punches.py  migrate_db_region.py  migrate_db_region.sh  migrate_json_to_postgres.py  migrate_schedule_names_to_odoo.py  preview_new_dashboard.py  probe_odoo_auth.py  render_kiosk_preview.py  repair_time_off_full_day_hours.py  replay_schedule_solver.py  seed_default_view_from_legacy_filter.py
tests/: conftest.py  test_absence_sync.py  test_admin_devices_template.py  test_admin_precompute.py  test_approve_regular_attendance_script.py  test_assignment_windows.py  test_assignment_windows_breakdown.py  test_attendance.py  test_auth_middleware.py  test_auth_session.py  test_auto_lunch_flex_sync.py  test_auto_lunch_worker.py  test_auto_schedule_capacity.py  test_awards.py  test_base_app_template.py  test_calendar_conflict_monitor.py  test_cert_lookup.py  test_changelog_render.py  test_client.py  test_custom_dashboards_routes.py  test_dashboard_catalog.py  test_dashboards_polish.py  test_db.py  test_db_pool_wait.py  test_department_operator_labels.py  test_deps_window_dates.py  (+190 more)
(+395 files in other folders)
