[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpi-plant-manager"
version = "0.1.0"
description = "GPI Plant Manager — daily staffing scheduler and work-center dashboards for Gruber Pallets, wired to the Zira.us telematics API."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "tzdata>=2024.1; platform_system == 'Windows'",
    "psycopg2-binary>=2.9.9",
    "playwright>=1.40",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.24",
]

[project.scripts]
zira-dashboard = "zira_dashboard.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zira_probe", "src/zira_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
